# ot-harjoitustyo

./: .gitignore  README.md
docs/: requirements-specification.md  working-hours.md
laskarit/viikko3/: monopoli.md  sekvenssikaavio.md
relic-manager/: pyproject.toml  tasks.py
relic-manager/docs/: architechture.md  architecture.md  changelog.md  requirements-specification.md  user-guide.md  working-hours.md
relic-manager/src/: build.py  config.py  create_sample_db.py  db.py  index.py  init_db.py  populate_sample_db.py
relic-manager/src/entities/: relic.py
relic-manager/src/repositories/: relic_repository.py
relic-manager/src/services/: relic_service.py
relic-manager/src/tests/repositories/: relic_repository_test.py
relic-manager/src/tests/services/: relic_service_test.py
relic-manager/src/ui/: add_relic_view.py  relics_view.py  ui.py
